k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tp-devops-cloud-service
spec:
    selector:
        app: tp-devops-cloud
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
